tests/vertical-slice/reject/machine_task_gate_fork_args.hew
// Reject fixture: a `fork child = worker(42)` inside a machine state entry
// block must fail before codegen. The current end-to-end compiler stops at the
// checker-level parser-only gate for `fork name = expr;`; HIR unit coverage
// pins the lower-level Item::Machine task-gate walker directly.
fn worker(x: i64) {}

machine M {
    state Idle {
        entry {
            scope {
                fork child = worker(42);
            }
        }
    }
    state Done;
    event Tick;
    on Tick: Idle -> Done { Done }
    default { self }
}

fn main() {}
